<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_city"
            android:icon="@drawable/ic_location_city_black"
            android:title="@string/navigation_drawer_destination" />
        <item
            android:id="@+id/nav_travel"
            android:icon="@drawable/ic_directions_car_black"
            android:title="@string/navigation_drawer_travel" />
        <item
            android:id="@+id/nav_my_trips"
            android:icon="@drawable/ic_card_travel_black"
            android:title="@string/navigation_drawer_my_trip" />
        <item
            android:id="@+id/nav_my_friends"
            android:icon="@drawable/ic_people_black"
            android:title="@string/navigation_drawer_my_friends" />
        <item
            android:id="@+id/nav_utility"
            android:icon="@drawable/ic_utilities"
            android:title="@string/navigation_drawer_utilities" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about_us"
                android:title="@string/navigation_drawer_about_us" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/navigation_drawer_sign_out" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/navigation_drawer_settings"/>
        </menu>
    </item>

</menu>
